--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Express Static</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Valentine's Day App</title>
+    <script>
+      window.location.href = 'valentine.html';
+    </script>
   </head>
   <body>
-    <h1>Hello from Express</h1>
-    <p>This file is being served!</p>
+    <p>Redirecting to Valentine's Day Facts...</p>
   </body>
 </html>
