--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Valentine's Day App</title>
-    <script>
-      window.location.href = 'valentine.html';
-    </script>
-  </head>
-  <body>
-    <p>Redirecting to Valentine's Day Facts...</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirecting to Valentine's Day</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: radial-gradient(circle at top left, #ffccd5, #ff7aa1);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: white;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      text-shadow: 2px 2px 4px #000;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 5px;
+      background: #ff4d6d;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #ff1f4d;
+      transform: scale(1.1);
+    }
+
+    /* Floating hearts */
+    .heart {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: red;
+      clip-path: polygon(50% 0%, 61% 10%, 70% 25%, 70% 40%, 50% 60%, 30% 40%, 30% 25%, 39% 10%);
+      animation: floatHeart linear infinite;
+      opacity: 0.7;
+    }
+
+    @keyframes floatHeart {
+      0% { transform: translateY(100vh) rotate(0deg) scale(0.8); opacity: 0.7; }
+      50% { transform: translateY(50vh) rotate(180deg) scale(1); opacity: 1; }
+      100% { transform: translateY(-20vh) rotate(360deg) scale(0.8); opacity: 0; }
+    }
+  </style>
+</head>
+<body>
+  <h1>Redirecting to Valentine's Day Facts...</h1>
+  <p>You will be redirected in <span id="countdown">5</span> seconds.</p>
+  <button id="cancelBtn">Cancel Redirect</button>
+
+  <script>
+    // Floating hearts animation
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.className = 'heart';
+      heart.style.left = Math.random() * window.innerWidth + 'px';
+      heart.style.animationDuration = 2 + Math.random() * 3 + 's';
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 5000);
+    }
+    setInterval(createHeart, 300);
+
+    // Countdown and redirect
+    let countdown = 5;
+    const countdownEl = document.getElementById('countdown');
+    let redirectInterval = setInterval(() => {
+      countdown--;
+      countdownEl.textContent = countdown;
+      if (countdown <= 0) {
+        clearInterval(redirectInterval);
+        window.location.href = 'valentine.html';
+      }
+    }, 1000);
+
+    // Cancel button
+    document.getElementById('cancelBtn').addEventListener('click', () => {
+      clearInterval(redirectInterval);
+      alert('Redirect cancelled! You can stay on this page.');
+    });
+  </script>
+</body>
 </html>
